Error Images added...

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,5 +47,6 @@
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
+    <include layout="@layout/error_layout"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
